--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
         <link href="style.css" rel="stylesheet" type="text/css">
     </head>
     <body>
-    
+        <div class="container">
+            <div class="logo">
+                <img src="images/googlelogo.png" alt="Google Logo">
+            </div>
+        </div>
     </body>
 </html>
