--- a/index.html
+++ b/index.html
@@ -8,8 +8,47 @@
     </head>
     <body>
         <div class="container">
+            <header>
+                <nav class="nav-left">
+                    <a>About</a>
+                    <a>Store</a>
+                </nav>
+                <nav class="nav-right">
+                    <a>Gmail</a>
+                    <a>Images</a>
+                    <a>Grid</a>
+                    <a>Alarm</a>
+                    <a>Sign In</a>
+                </nav>
+            </header>
             <div class="logo">
                 <img src="images/googlelogo.png" alt="Google Logo">
+            </div>
+            <div class="searchbox">
+                <form class="input">
+                    <input type="text" name="searchbox">
+                </form>
+            </div>
+            <div class="buttons">
+                <button>Google Search</button>
+                <button>I'm Feeling Lucky</button>
+            </div>
+            <div class="footer">
+                <footer>
+                    <ul>
+                        <nav class="nav-left">
+                            <li><a>Advertising</a></li>
+                            <li><a>Business</a></li>
+                        </nav>
+                    </ul>
+                    <ul>
+                        <nav class="nav-right">
+                            <li><a>Privacy</a></li>
+                            <li><a>Terms</a></li>
+                            <li><a>Settings</a></li>
+                        </nav>
+                    </ul>
+                </footer>
             </div>
         </div>
     </body>
