--- a/index.html
+++ b/index.html
@@ -9,18 +9,23 @@
     <body>
         <div class="container">
             <header>
-                <nav class="nav-left">
-                    <a>About</a>
-                    <a>Store</a>
-                </nav>
-                <nav class="nav-right">
-                    <a>Gmail</a>
-                    <a>Images</a>
-                    <a>Grid</a>
-                    <a>Alarm</a>
-                    <a>Sign In</a>
-                </nav>
+                <ul>
+                    <nav class="nav-left">
+                        <li><a>About</a></li>
+                        <li><a>Store</a></li>
+                    </nav>
+                </ul>
+                <ul>
+                    <nav class="nav-right">
+                        <li><a>Gmail</a></li>
+                        <li><a>Images</a></li>
+                        <li><a>Grid</a></li>
+                        <li><a>Alarm</a></li>
+                        <li><a>Sign In</a></li>
+                    </nav>
+                </ul>
             </header>
+
             <div class="logo">
                 <img src="images/googlelogo.png" alt="Google Logo">
             </div>
@@ -29,10 +34,14 @@
                     <input type="text" name="searchbox">
                 </form>
             </div>
+
             <div class="buttons">
                 <button>Google Search</button>
                 <button>I'm Feeling Lucky</button>
             </div>
+
+            <div class="spacer"></div>
+
             <div class="footer">
                 <footer>
                     <ul>
