Refactor index.html

--- a/index.html
+++ b/index.html
@@ -9,32 +9,36 @@
     <body>
         <div class="container">
             <header>
-                <ul>
-                    <nav class="nav-left">
-                        <li><a>About</a></li>
-                        <li><a>Store</a></li>
-                    </nav>
-                </ul>
-                <ul>
-                    <nav class="nav-right">
-                        <li><a>Gmail</a></li>
-                        <li><a>Images</a></li>
-                        <li><a>Grid</a></li>
-                        <li><a>Alarm</a></li>
-                        <li><a>Sign In</a></li>
-                    </nav>
-                </ul>
+
+                <!-- Top nav bar left-->
+                <nav class="nav-left">
+                    <a>About</a>
+                    <a>Store</a>
+                </nav>
+
+                <!-- Top nav bar right-->
+                <nav class="nav-right">
+                    <a>Gmail</a>
+                    <a>Images</a>
+                    <a>Grid</a>
+                    <a>Alarm</a>
+                    <a>Sign In</a>
+                </nav>
             </header>
 
+            <!-- Google Image -->
             <div class="logo">
                 <img src="images/googlelogo.png" alt="Google Logo">
             </div>
+
+            <!-- Searchbox -->
             <div class="searchbox">
                 <form class="input">
                     <input type="text" name="searchbox">
                 </form>
             </div>
 
+            <!-- Buttons -->
             <div class="buttons">
                 <button>Google Search</button>
                 <button>I'm Feeling Lucky</button>
@@ -44,19 +48,18 @@
 
             <div class="footer">
                 <footer>
-                    <ul>
-                        <nav class="nav-left">
-                            <li><a>Advertising</a></li>
-                            <li><a>Business</a></li>
-                        </nav>
-                    </ul>
-                    <ul>
-                        <nav class="nav-right">
-                            <li><a>Privacy</a></li>
-                            <li><a>Terms</a></li>
-                            <li><a>Settings</a></li>
-                        </nav>
-                    </ul>
+                    <!-- Bottom nav left -->
+                     <nav class="nav-left">
+                        <a>Advertising</a>
+                        <a>Business</a>
+                    </nav>
+
+                    <!-- Bottom nav right -->
+                    <nav class="nav-right">
+                        <a>Privacy</a>
+                        <a>Terms</a>
+                        <a>Settings</a>
+                    </nav>
                 </footer>
             </div>
         </div>
