--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
     <head>
         <meta charset="UTF-8">
         <title>Google Homepage</title>
-        <link href="reset.css" rel="stylesheet" type="text/css">
+        <!-- <link href="reset.css" rel="stylesheet" type="text/css"> -->
         <link href="style.css" rel="stylesheet" type="text/css">
     </head>
 
     <body>
         <div class="container">
             <header>
-                
+
                 <!-- Top nav bar left-->
                 <nav class="nav-left">
                     <a>About</a>
@@ -28,41 +28,42 @@
             </header>
 
             <!-- Google Image -->
-            <div class="logo">
-                <img src="images/googlelogo.png" alt="Google Logo">
+            <div class="body">
+                <div class="logo">
+                    <img src="images/googlelogo.png" alt="Google Logo">
+                </div>
+
+                <!-- Searchbox -->
+                <div class="searchbox">
+                    <form class="input">
+                        <input type="text" name="searchbox">
+                    </form>
+                </div>
+
+                <!-- Buttons -->
+                <div class="buttons">
+                    <button>Google Search</button>
+                    <button>I'm Feeling Lucky</button>
+                </div>
+                
+
+                <!-- <div class="spacer"></div> -->
             </div>
 
-            <!-- Searchbox -->
-            <div class="searchbox">
-                <form class="input">
-                    <input type="text" name="searchbox">
-                </form>
-            </div>
+            <footer>
+                <!-- Bottom nav left -->
+                 <nav class="nav-left">
+                    <a>Advertising</a>
+                    <a>Business</a>
+                </nav>
 
-            <!-- Buttons -->
-            <div class="buttons">
-                <button>Google Search</button>
-                <button>I'm Feeling Lucky</button>
-            </div>
-
-            <div class="spacer"></div>
-
-            <div class="footer">
-                <footer>
-                    <!-- Bottom nav left -->
-                     <nav class="nav-left">
-                        <a>Advertising</a>
-                        <a>Business</a>
-                    </nav>
-
-                    <!-- Bottom nav right -->
-                    <nav class="nav-right">
-                        <a>Privacy</a>
-                        <a>Terms</a>
-                        <a>Settings</a>
-                    </nav>
-                </footer>
-            </div>
+                <!-- Bottom nav right -->
+                <nav class="nav-right">
+                    <a>Privacy</a>
+                    <a>Terms</a>
+                    <a>Settings</a>
+                </nav>
+            </footer>
         </div>
     </body>
 </html>
