--- a/index.html
+++ b/index.html
@@ -21,9 +21,8 @@
                 <nav class="nav-right">
                     <a>Gmail</a>
                     <a>Images</a>
-                    <a>Grid</a>
-                    <a>Alarm</a>
-                    <a>Sign In</a>
+                    <a><img class="grid" src="images/grid.png" alt="grid"></a>
+                    <a class="sign-in">Sign In</a>
                 </nav>
             </header>
 
@@ -45,9 +44,6 @@
                     <button>Google Search</button>
                     <button>I'm Feeling Lucky</button>
                 </div>
-                
-
-                <!-- <div class="spacer"></div> -->
             </div>
 
             <footer>
